--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -3,13 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
-  color: #fff;
-  background: #ebf2f5;
+  color: #FFF;
+  background: #EBF2F5;
 }
-body,
-input,
-button,
-textarea {
+
+body, input, button, textarea {
   font: 600 18px Nunito, sans-serif;
 }
